apps/golist-api/golist-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: golist-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: golist-api.dev.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: golist-api
            port:
              number: 8080
